--- a/Challenges/RepeatedWord/XUnitTestRepeatedWord/XUnitTestRepeatedWord.csproj
+++ b/Challenges/RepeatedWord/XUnitTestRepeatedWord/XUnitTestRepeatedWord.csproj
@@ -16,4 +16,10 @@
     <ProjectReference Include="..\RepeatedWord\RepeatedWord.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="HashTables">
+      <HintPath>..\..\..\Data-Structures\HashTables\HashTables\bin\Debug\netcoreapp2.2\HashTables.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
